src/objects/Apttus_Approval__Approval_Request__c.object
<CustomObject>
    <description>Designates an approval request created from an approval process</description>
    <fields>
        <fullName>APTS_Approval_Action__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;,&quot;Approve / Reject&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=addComment&quot;,&quot;Add Comment&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalRequestEscalate?id=&quot;&amp;Id,&quot;Escalate&quot;,&quot;_top&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Max_LI_Discount__c</fullName>
        <formula>Apttus_CQApprov__CartId__r.APTS_LP_Max_LI_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max. LI Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Rejected_Comments_filled__c</fullName>
        <description>Copy the Rejected Comments filled</description>
        <label>Rejected Comments filled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Rejection_Comments__c</fullName>
        <formula>NOT CONTAINS(APTS_LP_Rejected_Comments_filled__c,&quot;comments&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejection Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Adjustment_Amount__c</fullName>
        <formula>Apttus_CQApprov__CartId__r.APTS_LP_Total_Adjustment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSPA_Number__c</fullName>
        <formula>Apttus_Approval__Related_Agreement__r.Apttus__Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPA Number</label>
        <type>Text</type>
    </fields>
	<label>Approval Request</label>
    <listViews>
        <fullName>Apttus_Approval__AllApprovals</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_Approval_Action__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Apttus_QPApprov__ProposalId__c</columns>
        <columns>MSPA_Number__c</columns>
        <columns>Apttus_Approval__Related_Agreement__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus_Approval__Assigned_To_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Approval__Status_Link__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Apttus_Approval__Object_Type__c</field>
            <operation>equals</operation>
            <value>Apttus__APTS_Agreement__c</value>
        </filters>
        <filters>
            <field>Apttus_Approval__Object_Type__c</field>
            <operation>equals</operation>
            <value>Apttus_Proposal__Proposal__c</value>
        </filters>
        <label>All Approvals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__MyApprovals</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_Approval_Action__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Apttus_QPApprov__ProposalId__c</columns>
        <columns>MSPA_Number__c</columns>
        <columns>Apttus_Approval__Related_Agreement__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus_Approval__Assigned_To_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Apttus_Approval__Status_Link__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </filters>
        <filters>
            <field>Apttus_Approval__Object_Type__c</field>
            <operation>equals</operation>
            <value>Apttus__APTS_Agreement__c</value>
        </filters>
        <filters>
            <field>Apttus_Approval__Object_Type__c</field>
            <operation>equals</operation>
            <value>Apttus_Proposal__Proposal__c</value>
        </filters>
        <label>My Approvals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>